# kaggle

./: .gitignore  README.md  pyproject.toml
titanic/: main.py  submission.csv  titanic.ipynb
