[project]
name = "titanic"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "jupyter>=1.1.1",
    "kaggle>=2.1.2",
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "lightgbm>=4.0.0",
    "xgboost>=2.0.0",
]
